added tests to raise coverage